--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,7 +1,7 @@
 CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++17
 VAL = valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes
-SRC = main.cpp
+SRC = main.cpp Fixed.cpp
 
 NAME = file
 
