Cleaned and final

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -3,7 +3,7 @@ CPPFLAGS = -Wall -Wextra -Werror -std=c++17
 VAL = valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes
 SRC = main.cpp Fixed.cpp
 
-NAME = OCC
+NAME = ex00
 
 all: $(NAME)
 
